kubernetes/apps/default/pikvm/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: pikvm.${SECRET_TAILNET_NAME}
  name: pikvm
spec:
  ports:
    - name: http
      port: 80
    - name: metrics
      port: 9100
  externalName: placeholder
  type: ExternalName
