kubernetes/apps/default/pikvm/app/httproute.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pikvm
spec:
  ingressClassName: internal
  rules:
    - host: pikvm.perryhuynh.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pikvm
                port:
                  number: 80
          - pathType: Prefix
            path: "/metrics"
            backend:
              service:
                name: pikvm
                port:
                  number: 9100
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
spec:
  hostnames: ["pikvm.perryhuynh.com"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: pikvm
          namespace: default
          port: 80
