kubernetes/apps/default/pikvm/app/pikvm.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pikvm
spec:
  ingressClassName: internal
  rules:
    - host: &host pikvm.perryhuynh.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pikvm
                port:
                  number: 80
          - pathType: Prefix
            path: "/metrics"
            backend:
              service:
                name: pikvm
                port:
                  number: 9100
  tls:
    - hosts:
        - *host
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pikvm-tailscale
spec:
  ingressClassName: tailscale
  rules:
    - host: &host pikvm
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pikvm
                port:
                  number: 80
          - pathType: Prefix
            path: "/metrics"
            backend:
              service:
                name: pikvm
                port:
                  number: 9100
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: pikvm.${SECRET_TAILNET_NAME}
  name: pikvm
spec:
  ports:
    - name: http
      port: 80
    - name: metrics
      port: 9100
  externalName: placeholder
  type: ExternalName
